--- a/photos/templates/base.html
+++ b/photos/templates/base.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-    {% block scripts %}
+    <!--  -->
+    {% block content %}{{block.super}} {% endblock %} {% block scripts %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     {% bootstrap_javascript %} {% endblock %}
 </body>
