--- a/photos/templates/photos.html
+++ b/photos/templates/photos.html
@@ -1,23 +1,27 @@
-{%extends 'all-news/base.html'%} {% block content %}
+ {%extends 'base.html'%} {% block content %} {{ block.super}}
 
 <div class="container">
 
+    <!-- Looping through news   -->
+    {% for image in images %}
+
     <div class="row">
-        <img src="{{.article_image.url}}" class="img-responsive" alt="">
+        <img src="{{image.image.url}}" class="img-responsive" alt="">
     </div>
 
     <div class="row">
-        <h1 class="text-center">{{article.title}}</h1>
+        <h1 class="text-center">{{image.title}}</h1>
     </div>
 
     <div class="row">
-        <p>{{article.post}}</p>
+        <p>{{image.description}}</p>
     </div>
 
+    {% empty %}
     <div class="row">
-        <p>Posted {{article.pub_date|timesince}} by {{article.editor.first_name}}</p>
+        <h2 class="text-center">There are no images</h2>
     </div>
+    {% endfor %}
 
 </div>
-
-{% endblock %}
+{% endblock%}
