--- a/photos/templates/photos.html
+++ b/photos/templates/photos.html
@@ -6,7 +6,8 @@
     {% for image in images %}
 
     <div class="row">
-        <img src="{{image.image.url}}" class="img-responsive" alt="">
+        <img src="{{image.image.url}}" class="img-responsive" alt="Image">
+
     </div>
 
     <div class="row">
