--- a/gallery/templates/photos/search.html
+++ b/gallery/templates/photos/search.html
@@ -1,4 +1,4 @@
-{%extends 'base.html'%} {% block content %}
+{%extends ''photos/base.html'%} {% block content %}
 <div class="container">
 
     <div class="row">
@@ -12,9 +12,9 @@
 
     <div class="row">
 
-        {% if results %} {% for image in results %}
+        {% if results %} {% for result in results %}
         <div class="col-sm-6 col-md-3">
-            <h1>{{image.title}}</h1>
+            <h1>{{result.title}}</h1>
         </div>
         {% endfor %} {% endif %}
     </div>
