--- a/photos/templates/base.html
+++ b/photos/templates/base.html
@@ -12,8 +12,7 @@
 </head>
 
 <body>
-    <!--  -->
-    {% block content %}{{block.super}} {% endblock %} {% block scripts %}
+    {% include "navbar.html" %}z {% block content %}{{block.super}} {% endblock %} {% block scripts %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     {% bootstrap_javascript %} {% endblock %}
 </body>
