--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -8,14 +8,12 @@
         <div class="col-sm-4 col-md-4 navbar-right">
 
             <form class="navbar-form" role="search" action="{% url 'search_results' %}">
-
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search Article" name="article">
+                    <input type="text" class="form-control" placeholder="Search by category" name="category">
                     <div class="input-group-btn">
                         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
                 </div>
-
             </form>
         </div>
         <!-- search form end -->
