--- a/photos/templates/photos/photos.html
+++ b/photos/templates/photos/photos.html
@@ -1,4 +1,4 @@
- {%extends 'photos/base.html'%} {% block content %} {{ block.super}}
+ {%extends 'base.html'%} {% block content %} {{ block.super}}
 
 <div class="container">
 
