--- a/photos/templates/photos/search.html
+++ b/photos/templates/photos/search.html
@@ -1,4 +1,4 @@
-{%extends ''photos/base.html'%} {% block content %}
+{%extends 'base.html'%} {% block content %}
 <div class="container">
 
     <div class="row">
