--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -7,9 +7,21 @@
         <!-- Adding a search form  -->
         <div class="col-sm-4 col-md-4 navbar-right">
 
-            <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+            <form class="navbar-form" role="search" action="{% url 'category' %}">
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="Search by category" name="category">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        <div class="col-sm-4 col-md-4 navbar-right">
+
+            <form class="navbar-form" role="search" action="{% url 'location' %}">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search by location" name="category">
                     <div class="input-group-btn">
                         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
