--- a/photos/templates/photos/photos.html
+++ b/photos/templates/photos/photos.html
@@ -1,25 +1,18 @@
  {%extends 'base.html'%} {% block content %} {{ block.super}}
 
 <div class="container">
-
-    <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg ">
-            <div class="col-sm-4 col-md-4 navbar-left">
-                <div class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-filter"></i>
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        {% for item in locations %}
-                        <a class="dropdown-item" href="/location/{{item.city}}">{{item.city}}</a>
-                        <a class="dropdown-item" href="#">Action</a> {% endfor %}
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </div>
-
     <!-- Looping through news   -->
+
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown button
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            {% for image in images %}
+            <a class="dropdown-item" href="{% url 'category' %}">{{image.category}}</a> {% endfor %}
+
+        </div>
+    </div>
     {% for image in images %}
 
     <div class="row">
@@ -40,6 +33,8 @@
         <h2 class="text-center">There are no images</h2>
     </div>
     {% endfor %}
+
+
 
 </div>
 {% endblock%}
