--- a/photos/templates/base.html
+++ b/photos/templates/base.html
@@ -1,4 +1,4 @@
-{% load bootstrap3 %}
+{% load bootstrap3 %}{% load static%}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     {% block styles %} {% bootstrap_css %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> {% endblock %}
+    <link rel="stylesheet" href="{% static 'css/photos1.css' %}"> {% endblock %}
 </head>
 
 <body>
