--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -23,7 +23,7 @@
 
             <form class="navbar-form" role="search" action="{% url 'location' %}">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search by location" name="category">
+                    <input type="text" class="form-control" placeholder="Search by location" name="location">
                     <div class="input-group-btn">
                         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                     </div>
