--- a/photos/templates/base.html
+++ b/photos/templates/base.html
@@ -9,7 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     {% block styles %} {% bootstrap_css %}
-    <link rel="stylesheet" href="{% static 'css/photos1.css' %}"> {% endblock %}
+    <link rel="stylesheet" href="{% static 'css/photos1.css' %}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Cormorant+Garamond:wght@300;400&family=Playfair+Display&display=swap" rel="stylesheet">
+    <!-- CSS only -->
+    {% endblock %}
+
 </head>
 
 <body>
