Adding button styles

--- a/photos/templates/photos/photos.html
+++ b/photos/templates/photos/photos.html
@@ -38,7 +38,7 @@
                 <div class="modal-footer">
 
                     <ul class="list-inline list-unstyled">
-                        <button value="{{image.image.url}}" onClick="SelfCopy(this.value)">Copy Link</button>
+                        <button class="btn" value="{{image.image.url}}" onClick="SelfCopy(this.value)">Copy Link</button>
 
                         <li class="list-inline-item gallery-item-likes"><span class="visually-hidden"></span><i class="fa fa-tags" aria-hidden="true"></i> {{image.category}} </li>
                         <li class="list-inline-item gallery-item-comments"><span class="visually-hidden"></span><i class="fa fa-thumb-tack" aria-hidden="true"></i> {{image.location}} </li>
