--- a/photos/static/css/photos1.css
+++ b/photos/static/css/photos1.css
@@ -10,6 +10,20 @@ p {
     font-family: 'Anonymous Pro', monospace;
 }
 
+body {
+    font-family: 'Playfair Display', serif;
+}
+
+.btn {
+    display: block;
+    padding: 5px;
+    color: rgb(0, 0, 0);
+    margin: 10px 0 0;
+    width: 100%;
+    font-size: 13px;
+    border-radius: 2px
+}
+
 .cont {
     border: 30px;
     padding: 30px;
@@ -60,6 +74,20 @@ p {
     right: 0;
     padding: 3rem;
     font-size: 30px;
+}
+
+body {
+    font-family: 'Open Sans', serif;
+}
+
+.btn {
+    display: block;
+    padding: 5px;
+    color: rgb(0, 0, 0);
+    margin: 10px 0 0;
+    width: 100%;
+    font-size: 13px;
+    border-radius: 2px
 }
 
 .hover-4-description {
