--- a/photos/templates/photos/photos.html
+++ b/photos/templates/photos/photos.html
@@ -2,7 +2,6 @@
 
 <div class="container-fluid">
     <!-- Looping through news   -->
-
     {% for image in images %}
     <div class=" cont col-xs-12 col-sm-6  col-md-6  col-lg-4 ">
         <div data-toggle="modal" data-target="#{{image.id}}">
@@ -14,7 +13,20 @@
                 </div>
             </div>
         </div>
+        <button value="{{image.location}}" onClick="SelfCopy(this.value)">Copy Link</button>
+
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown button
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" value="{{image.location}}" href="{{image.location}}">Action</a>
+            </div>
+        </div>
+
+        <button class="btn">{% for category in image.category.all %}{{ category }}<br/>{% endfor %}</button>
     </div>
+
 
 
 
@@ -67,7 +79,7 @@
 <script>
     function SelfCopy(copyText) {
         navigator.clipboard.writeText(copyText);
-        alert("You just copied this: (" + copyText + ").");
+        alert("You have copied the link");
     }
 </script>
 
