--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -1,36 +1,20 @@
+{% load static %}
+
 <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="{% url 'gallery' %}">My gallery</a>
-        </div>
+    <a href="{% url 'gallery' %}"> <img class="navbar-logo" src="{% static 'logo.png' %}" alt="image alt text" /></a>
 
-        <!-- Adding a search form  -->
-        <div class="col-sm-4 col-md-4 navbar-right">
+    <!-- Adding a search form  -->
+    <div class=" nav-form col-sm-4 col-md-4 navbar-right">
 
-            <form class="navbar-form" role="search" action="{% url 'category' %}">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search by category" name="category">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                    </div>
+        <form class="navbar-form" role="search" action="{% url 'category' %}">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search by category" name="category">
+                <div class="input-group-btn">
+                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                 </div>
-            </form>
-        </div>
-
-
-
-        <div class="col-sm-4 col-md-4 navbar-right">
-
-            <form class="navbar-form" role="search" action="{% url 'location' %}">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search by location" name="location">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                    </div>
-                </div>
-            </form>
-        </div>
-
-        <!-- search form end -->
+            </div>
+        </form>
     </div>
+
+    <!-- search form end -->
 </nav>
