--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <nav class="navbar navbar-inverse">
-    <a href="{% url 'gallery' %}"> <img class="navbar-logo" src="{% static 'logo.png' %}" alt="image alt text" /></a>
+    <a href="{% url 'gallery' %}"> <img class="navbar-logo" src="{% static 'images/logo.png' %}" alt="image alt text" /></a>
 
     <!-- Adding a search form  -->
     <div class=" nav-form col-sm-4 col-md-4 navbar-right">
@@ -10,7 +10,7 @@
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search by category" name="category">
                 <div class="input-group-btn">
-                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    <button class="btn btn-default" type="submit"><img class="icon" src="{% static '/images/search.gif' %}" alt="image alt text" /></button>
                 </div>
             </div>
         </form>
