--- a/photos/templates/photos/photos.html
+++ b/photos/templates/photos/photos.html
@@ -1,4 +1,4 @@
- {%extends 'base.html'%} {% block content %} {{ block.super}}
+ {%extends 'base.html'%} {% load static %} {% block content %} {{ block.super}}
 
 <div class="container-fluid">
     <div class="dropdown show">
@@ -6,10 +6,10 @@
           Filter by location
         </a>
 
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <div class="dropdown-menu " aria-labelledby="dropdownMenuLink">
 
             {% for city in location%}
-            <a class="dropdown-item" href="{% url 'location' %}?location={{city.city}}">
+            <a class="list-group-item " href="{% url 'location' %}?location={{city.city}}">
                 <li>{{city.city}} </li>
             </a>{% endfor %}
         </div>
@@ -19,20 +19,23 @@
 <!-- Looping through news   -->
 {% for image in images %}
 <div class=" cont col-xs-12 col-sm-6  col-md-6  col-lg-4 ">
-    <div data-toggle="modal" data-target="#{{image.id}}">
-        <div class="hover hover-4 text-white rounded"><img src="{{image.image.url}}" alt="">
-            <div class="hover-overlay"></div>
-            <div class="hover-4-content">
-                <h3 class="hover-4-title text-uppercase font-weight-bold mb-0">{{image.title}}</h3>
-                <p class="hover-4-description text-uppercase mb-0 small">{{image.description}}</p>
+    <div>
+        <div data-toggle="modal" data-target="#{{image.id}}">
+            <div class="hover hover-4 text-white rounded"><img src="{{image.image.url}}" alt="">
+                <div class="hover-overlay"></div>
+                <div class="hover-4-content">
+                    <h3 class="hover-4-title text-uppercase font-weight-bold mb-0">{{image.title}}</h3>
+                    <p class="hover-4-description text-uppercase mb-0 small">{{image.description}}</p>
+                </div>
             </div>
         </div>
     </div>
-    <div class="category-tags d-inline">
-        {% for category in image.category.all %}
-        <h5 class="button inline">{{ category }}</h5>{% endfor %}
+    <div class="cat ">
+        Categories: {% for category in image.category.all %}
+        <span class="button inline">{{ category }}</span>{% endfor %}
     </div>
 </div>
+
 
 
 
@@ -61,8 +64,8 @@
                 <ul class="list-inline list-unstyled">
                     <button class="btn" value="{{image.image.url}}" onClick="SelfCopy(this.value)">Copy Link</button>
 
-                    <li class="list-inline-item gallery-item-comments"><span class="visually-hidden"></span>{% for category in image.category.all %}{{ category }} {% endfor %}</li>
-                    <li class="list-inline-item gallery-item-comments"><span class="visually-hidden"></span><i class="fa fa-thumb-tack" aria-hidden="true"></i> {{image.location}} </li>
+                    <li class="list-inline-item "><img class="icon" src="{% static '/images/cat.png' %}" alt="image alt text" />{% for category in image.category.all %}{{ category }} {% endfor %}</li>
+                    <li class="list-inline-item "><img class="icon" src="{% static '/images/loc.png' %}" alt="image alt text" />{{image.location}} </li>
                 </ul>
             </div>
         </div>
