--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -10,7 +10,7 @@
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search by category" name="category">
                 <div class="input-group-btn">
-                    <button class="btn btn-default" type="submit"><img class="icon" src="{% static '/images/search.gif' %}" alt="image alt text" /></button>
+                    <button class="btn btn-default" type="submit"><img class="icon" src="{% static '/images/search.png' %}" alt="image alt text" /></button>
                 </div>
             </div>
         </form>
