--- a/photos/templates/photos/photos.html
+++ b/photos/templates/photos/photos.html
@@ -46,14 +46,15 @@
 
 <!-- Modal -->
 <div class="modal fade" id="{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <button type="button" style="background-color: black;" class="close" data-dismiss="modal" aria-label="Close">
-    </button>
+
     <div class="modal-dialog modal-dialog-centered" role="document">
+
         <div class="modal-content">
+            <button type="button" class="close" style="height: 20px;" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
             <div class="modal-header">
-
                 <h5 class="modal-title" id="exampleModalLongTitle">{{image.title}}</h5>
-
             </div>
             <div class="modal-body">
                 <img class="modal-img" src="{{image.image.url}}" alt="">
@@ -63,7 +64,6 @@
 
                 <ul class="list-inline list-unstyled">
                     <button class="btn" value="{{image.image.url}}" onClick="SelfCopy(this.value)">Copy Link</button>
-
                     <li class="list-inline-item "><img class="icon" src="{% static '/images/cat.png' %}" alt="image alt text" />{% for category in image.category.all %}{{ category }} {% endfor %}</li>
                     <li class="list-inline-item "><img class="icon" src="{% static '/images/loc.png' %}" alt="image alt text" />{{image.location}} </li>
                 </ul>
