--- a/photos/templates/base.html
+++ b/photos/templates/base.html
@@ -7,8 +7,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    {% block styles %} {% bootstrap_css %}
+    <title>Angelic Art</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/flaticon.png' %}" /> {% block styles %} {% bootstrap_css %}
     <link rel="stylesheet" href="{% static 'css/photos1.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Cormorant+Garamond:wght@300;400&family=Playfair+Display&display=swap" rel="stylesheet">
     <!-- CSS only -->
